packages/ui/src/index.css
@import 'tailwindcss';
@import 'tw-animate-css';

@config '../tailwind.config.ts';

/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
	*,
	::after,
	::before,
	::backdrop,
	::file-selector-button {
		border-color: var(--color-gray-200, currentcolor);
	}

	/* Tailwind v4 removed antialiased from preflight */
	body {
		@apply antialiased;
	}
}

::view-transition-old(root),
::view-transition-new(root) {
	animation-duration: 0.1s;
}

html,
body {
	cursor: default;
	/* Prevent text selection and text cursor by default for native OS feel */
	-webkit-user-select: none;
	user-select: none;
	/* To match Figma weight */
	text-rendering: geometricPrecision;
	@apply -tracking-3 text-white/90;
}

/* Prevent image and link dragging for native OS feel */
img,
a {
	-webkit-user-drag: none;
}

/* Override browser default cursor: pointer on interactive elements for native OS feel */
a,
button,
[role='button'] {
	cursor: default;
}

html {
	--font-inter: 'Inter';
	/* Space above the sheet. Putting here because it's used in multiple places for calculations */
	--sheet-top: 2vh;
	--wallpaper-blur: 12px;
}

/* Global scrollbar styling */
/* We set this here because some components cannot easily use ScrollArea or FadeScroller components (e.g., react-window) */
::-webkit-scrollbar {
	background: transparent; /* Transparent track by default */
	width: 11px;
}

::-webkit-scrollbar-track {
	background: transparent; /* Transparent track by default */
}

/* Show track background on hover */
::-webkit-scrollbar:hover {
	background: rgba(255, 255, 255, 0.05);
}

::-webkit-scrollbar-thumb {
	border: 4px solid transparent; /* Key trick for obtaining a thin scrollbar */
	border-radius: 20px;
	background-clip: padding-box; /* Ensure the background only applies within the content box */
	background-color: rgba(255, 255, 255, 0.15);
}

::-webkit-scrollbar-thumb:hover {
	background-color: rgba(255, 255, 255, 0.4);
}

@supports (font-variation-settings: normal) {
	html {
		--font-inter: 'Inter var';
	}
}

::selection {
	@apply bg-brand text-white;
}

/* https://stackoverflow.com/a/45050338 */
@layer base {
	input,
	textarea,
	button,
	select,
	a {
		-webkit-tap-highlight-color: transparent;
	}
}

/* Hide scrollbar for Chrome, Safari and Opera */
.umbrel-hide-scrollbar::-webkit-scrollbar {
	display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.umbrel-hide-scrollbar {
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}

.umbrel-button:active {
	scale: 0.97;
}

@property --distance1 {
	syntax: '<length>'; /* <- defined as type length for the transition to work */
	initial-value: 0;
	inherits: false;
}

@property --distance2 {
	syntax: '<length>'; /* <- defined as type length for the transition to work */
	initial-value: 0;
	inherits: false;
}

.umbrel-fade-scroller-x,
.umbrel-fade-scroller-y {
	/* 8ms animates in 5 frames assuming 60fps */
	transition:
		--distance1 80ms ease-out,
		--distance2 80ms ease-out;
}

.umbrel-fade-scroller-y {
	mask-image: linear-gradient(to bottom, transparent, red var(--distance1) calc(100% - var(--distance2)), transparent);
}

.umbrel-fade-scroller-x {
	mask-image: linear-gradient(to right, transparent, red var(--distance1) calc(100% - var(--distance2)), transparent);
}

.umbrel-wallpaper-fade-scroller {
	mask-image: linear-gradient(to right, transparent, red 16px calc(100% - 16px), transparent);
}

.umbrel-dialog-fade-scroller {
	mask-image: linear-gradient(to bottom, transparent, red 32px calc(100% - 32px), transparent);
}

.umbrel-cmdk-fade-scroller {
	mask-image: linear-gradient(to bottom, transparent, red 20px calc(100% - 20px), transparent);
}

/* Targets the correct div inside the react-window component */
.umbrel-files-fade-scroller > div > div {
	mask-image: linear-gradient(to bottom, red 0, red calc(100% - 24px), transparent);
}

/* Only fade the top when a user has scrolled */
.umbrel-files-fade-scroller.scrolled > div > div {
	mask-image: linear-gradient(to bottom, transparent 0, red 24px, red calc(100% - 24px), transparent 100%);
}

.umbrel-divide-y > * {
	@apply relative;
}
.umbrel-divide-y > * + *::before {
	content: '';
	@apply absolute inset-x-0 top-0 h-px w-full bg-linear-to-r from-transparent via-white/5 to-transparent;
}

@keyframes blink-caret {
	50% {
		background: transparent;
	}
}

@keyframes pulse-border {
	50% {
		box-shadow: var(--segment-color) 0 0 0 1px;
		border-color: var(--segment-color);
	}
}

@keyframes slide-down {
	to {
		transform: translateY(100px);
	}
}

@keyframes fade-out {
	to {
		opacity: 0;
	}
}

@keyframes fade-in {
	to {
		opacity: 1;
	}
}

@keyframes bounce-gradient {
	0%,
	100% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
}

.umbrel-bouncing-gradient {
	animation: bounce-gradient 2s ease infinite;
	background: linear-gradient(to right, transparent, white, transparent);
	background-size: 200% 100%;
}

[cmdk-list] {
	transition: height 100ms ease;
	/* height: var(--cmdk-list-height); */
	/* min-height: 200px; */
	max-height: 500px;
	/* scroll-padding-block-start: 20px; */
	/* scroll-padding-block-end: 20px; */
}

[cmdk-item] + [cmdk-item] {
	@apply mt-1 md:mt-2.5;
}

@keyframes animate-arc {
	from {
		stroke-dashoffset: var(--full-length);
		stroke-opacity: 0;
	}
	to {
		stroke-dashoffset: var(--final-offset);
		stroke-opacity: 1;
	}
}

@keyframes animate-unblur {
	from {
		scale: 1.25;
		filter: blur(var(--wallpaper-blur));
	}
	to {
		scale: 1;
		filter: blur(0);
	}
}

@keyframes pulse {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0.5;
	}
	100% {
		opacity: 1;
	}
}

.umbrel-pulse {
	animation-duration: 1s;
	animation-timing-function: ease-in-out;
	animation-iteration-count: infinite;
	animation-fill-mode: forwards;
	animation-name: pulse;
}

@keyframes pulse-a-few-times {
	0% {
		opacity: 1;
	}
	20% {
		opacity: 1;
	}
	40% {
		opacity: 0.5;
	}
	60% {
		opacity: 1;
	}
	80% {
		opacity: 0.5;
	}
	100% {
		opacity: 1;
	}
}

.umbrel-pulse-a-few-times {
	animation-duration: 1s;
	animation-timing-function: ease-in-out;
	animation-iteration-count: 1;
	animation-fill-mode: forwards;
	animation-name: pulse-a-few-times;
}

/* Override Tailwind truncate class because  */
/* https://github.com/tailwindlabs/tailwindcss/issues/10939 */
.truncate {
	overflow: initial;
	overflow-x: hidden; /* for older browsers, though top and bottom of text in `tight-inter-trim` is going to be clipped at the top and bottom */
	overflow-x: clip;
}

/* Fixes action button not aligning to the right when content is too short */
[data-sonner-toaster] [data-content] {
	@apply w-full;
}

.xterm .xterm-viewport {
	background-color: transparent !important;
}

.xterm .xterm-viewport {
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}

/* Permanent Marker self-hosted font */
@font-face {
	font-style: normal;
	font-weight: 400;
	src: url('/fonts/permanent-marker.woff2') format('woff2');
	font-family: 'Permanent Marker';
	font-display: swap;
}

